--- a/source/_includes/custom/asides/recommend.html
+++ b/source/_includes/custom/asides/recommend.html
@@ -1,13 +1,10 @@
 <section>
-  <h1>Recommend</h1>
+  <h1>{{ "Recommend" | category_link }}</h1>
 	<ul role="list">
-		{% for post in site.posts %} 
-			{% if post.recommend %}
+		{% for post in site.categories["recommend"] limit site.recommend_posts %}
 			<li class="post">
 				<a href="{{ root_url }}{{ post.url }}">{% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a>
 			</li>
-			{% endif %}
 		{% endfor %}
-	
 	</ul>
 </section>
